--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2018"
 license = "AGPL-3.0-or-later"
 
 [dependencies]
+actix-cors = "0.6.0-beta.2"
 actix-web = "4.0.0-beta.9"
 anyhow = "1.0.44"
 chrono = { version = "0.4" }
